# picos

./: .gitignore  Makefile.am  autogen.sh  configure.ac
kernel/: main.c
kernel/arch/aarch64/boot/: start.S
kernel/arch/aarch64/link/: kernel.ld
kernel/arch/arm/: Makefile.am
kernel/arch/arm/boot/: start.S
kernel/arch/arm/link/: kernel.ld
kernel/arch/x86/: Makefile.am
kernel/arch/x86/boot/: multiboot.S  start.S
kernel/arch/x86/link/: kernel.ld
kernel/boot/: start.S
kernel/link/: arm-eabi.ld
